--- a/src/Containers/Styles.css
+++ b/src/Containers/Styles.css
@@ -21,6 +21,9 @@
 	padding: 10px;
 	z-index: 2;
 }
+.dropdown {
+	position:relative;
+}
 .dropdown:hover .dropdown-menu {
 	display: block;
 	z-index: 2;
@@ -28,9 +31,16 @@
 .dropdown-item:hover {
 background-color: #9B51E0; 
 color: white;
+position: relative;
+}
+.nav-admin {
+	margin-left: 30px;
 }
 section {
 	padding: 150px 0px;
+}
+.user-section {
+	padding: 50px 0px;
 }
 .home-section {
 	margin-top: 100px;
@@ -129,6 +139,27 @@ height: 70vh;
 button {
 	border: 0px;
 }
+.bg-oranged {
+	background-color : orangered;
+}
+.text-oranged {
+	color: orangered;
+}
+.bg-crimson {
+	background: crimson;
+}
+.text-crimson {
+	color: crimson;
+}
+.bg-chocolate {
+	background-color: chocolate;
+}
+.text-chocolate {
+	color: chocolate;
+}
+.text-gold {
+	color: rgba(160, 137, 5, 0.692);
+}
 .btn-medik {
 	background-color: #9B51E0;
 	color: white;
@@ -179,3 +210,249 @@ color: #BB6BD9;
 .tabShow {
 	display:block;
 }
+body {
+	font-size: .875rem;
+  }
+  .border-bottom {
+	  border-bottom: 2px solid #efefef;
+  }
+  .padding-sm {
+	  padding: 10px 0px;
+  }
+  .feather {
+	width: 16px;
+	height: 16px;
+	vertical-align: text-bottom;
+  }
+  
+  /*
+   * Sidebar
+   */
+   .z-index {
+	z-index: 100;
+}
+  .sidebar {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1; /* Behind the navbar */
+	padding: 100px 0px 0px; /* Height of navbar */
+	box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  }
+ 
+  .sidebar-sticky {
+	position: relative;
+	top: 0;
+	height: calc(100vh - 48px);
+	padding-top: 20px;
+	overflow-x: hidden;
+	overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  }
+ 
+  
+  @supports ((position: -webkit-sticky) or (position: sticky)) {
+	.sidebar-sticky {
+	  position: -webkit-sticky;
+	  position: sticky;
+	}
+  }
+  
+  .sidebar .nav-link {
+	font-weight: 500;
+	color:#9B51E0;
+  }
+  
+  .sidebar .nav-link .feather {
+	margin-right: 4px;
+	color: #999;
+  }
+  
+  .sidebar .nav-link.active {
+	color: #007bff;
+  }
+  
+  .sidebar .nav-link:hover .feather,
+  .sidebar .nav-link.active .feather {
+	color: inherit;
+  }
+  
+  .sidebar-heading {
+	font-size: .75rem;
+	text-transform: uppercase;
+  }
+.metric-card >.card {
+	margin: 10px 10px 0px 0px;
+	padding: 5px;
+}
+.metric-card  i {
+	font-size: 50px;
+}
+.align-center {
+	text-align: center;
+}
+
+.top-padding-sm {
+	padding-top: 30px;
+}
+.top-margin-sm {
+	margin-top: 20px;
+}
+.note {
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-weight: 200;
+	font-size: 20px;
+	color: white;
+	background-color:burlywood;
+}
+
+.display-none {
+	display: none;
+}
+.display-show {
+	display: block;
+}
+.display-block {
+	display: block;
+	color: red;
+
+}
+.success {
+	color: green;
+}
+.fixed {
+	z-index: 100;
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	top:0;
+	left: 0;
+}
+.fixed  i {
+	font-size: 50px;
+
+}
+.fixed >div {
+	margin: 20% 40%;
+}
+.admin-details-fixed{
+	z-index: 2;
+	height: 100vh;
+	width: 100%;
+	background-color: #efefef;
+	position: fixed;
+}
+.href:hover {
+	text-decoration: none;
+}
+.fixed-navbar-footer {
+	z-index: 2;
+	background-color: #fff;
+	box-shadow: 0 2px 18px rgba(59,64,69,0.1);
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	max-height: 30vh;
+	padding: 10px;
+	z-index: 2;
+}
+.fixed-navbar-footer li, .fixed-navbar-footer i {
+	display: block;
+	text-align: center;
+	color: #9B51E0;
+} 
+
+.fixed-navbar-header li, .fixed-navbar-header i {
+	display: block;
+	text-align: center;
+	color: #9B51E0;
+} 
+
+.user-dashboard-content {
+	padding: 10px 30px;
+}
+.user-dashboard-container {
+	margin: 30px 0px;
+}
+.user-dashboard-container>.card {
+
+	max-height: 1000px;
+}
+.user-dashboard-svg {
+	width: 300px;
+}
+.verification h3, .verification p{
+	font-weight: 800;
+	text-align: center;
+}
+.verification button {
+	text-align: center;
+}
+.chat {
+	height: 100vh;
+	overflow-y:auto;
+}
+.chat-message {
+	border-radius: 10px;
+	font-size: 20px;
+}
+.chat-color{
+	background-color:#260333;
+}
+.chat-static{
+	position: fixed;
+	margin-left: 20px;
+	margin-right: 20px;
+	z-index: 2;
+}
+.chat-static-top{
+	top: 0px;
+	right: 0px;
+	left: 0;
+}
+.chat-static-buttom{
+	bottom: 0px;
+	right: 0px;
+	left: 0;
+}
+.chat-dashboard-active {
+	color: #9B51E0;
+	background-color: white;
+	border-radius: 10px;
+	padding:10px;
+}
+.overflow-hidden{
+	overflow: hidden;
+}
+.float-left{
+	float: left;
+	clear: both;
+
+}
+
+.float-right {
+	float: right;
+	clear: both;
+}
+.max-width {
+	display: flex;
+	max-width: 70%;
+	margin-top: 20px;
+}
+
+@media (max-width:768px) {
+	.fixed-navbar-header {
+		display: none;
+	}
+	.user-dashboard-container h3{
+		font-size: 20px;
+	}
+}
+
+@media(min-width:768px) {
+	.fixed-navbar-footer {
+		display: none;
+	}
+}
+
