--- a/src/Containers/Styles.css
+++ b/src/Containers/Styles.css
@@ -297,8 +297,26 @@ body {
 .top-padding-sm {
 	padding-top: 30px;
 }
+.top-padding-md {
+	padding-top: 60px;
+}
+.top-padding-lg {
+	padding-top: 90px;
+}
+.bottom-padding-sm {
+	padding-top: 30px;
+}
+.bottom-padding-md {
+	padding-top: 60px;
+}
+.bottom-padding-lg {
+	padding-top: 90px;
+}
 .top-margin-sm {
 	margin-top: 20px;
+}
+.top-margin-md {
+	margin-top: 40px;
 }
 .note {
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -377,9 +395,9 @@ body {
 .user-dashboard-container {
 	margin: 30px 0px;
 }
-.user-dashboard-container>.card {
+.user-dashboard-container .card {
 
-	max-height: 1000px;
+	height: 100%;
 }
 .user-dashboard-svg {
 	width: 300px;
@@ -424,6 +442,12 @@ body {
 	border-radius: 10px;
 	padding:10px;
 }
+.notify{
+	font-size: 12px;
+	font-weight: bold;
+	position: absolute;
+	top: 0; 
+}
 .overflow-hidden{
 	overflow: hidden;
 }
@@ -442,6 +466,9 @@ body {
 	max-width: 70%;
 	margin-top: 20px;
 }
+.img-round {
+	border-radius: 100%;
+}
 
 @media (max-width:768px) {
 	.fixed-navbar-header {
@@ -449,6 +476,7 @@ body {
 	}
 	.user-dashboard-container h3{
 		font-size: 20px;
+		height: 20px
 	}
 
 }
@@ -459,5 +487,17 @@ body {
 	}
 	.admin-nav {
 		display: none;
+	}
+}
+
+@media (max-width: 1200px) {
+	.user-dashboard-container h3{
+		font-size: 15px;
+		height: 20px
+	}
+}
+@media (min-width: 1200px) {
+	.user-dashboard-container h3{
+		height: 60px
 	}
 }
