--- a/src/Containers/Styles.css
+++ b/src/Containers/Styles.css
@@ -457,10 +457,10 @@ body {
 	left: 0;
 }
 .chat-dashboard-active {
-	color: #9B51E0;
-	background-color: white;
-	border-radius: 10px;
-	padding:10px;
+	color:white;
+	background-color: #343a40;
+	border-radius: 3px;
+	padding:3px;
 }
 .notify{
 	font-size: 12px;
