--- a/src/Containers/Styles.css
+++ b/src/Containers/Styles.css
@@ -567,7 +567,52 @@ body {
 .main-login{
 	height: 100vh;
 }
+.partner-video{
+	  /* override other styles to make responsive */
+	  min-width:100%    !important;
+	  min-height: 100%   !important;
+	  overflow: hidden;
+	object-fit: fill;
+}
+.partner-video-height{
+	min-width: 100%;
+	min-height: 100%;
+	object-fit: fill;
+}
+.your-video-display{
+	max-width: 300px;
+	max-height: 150px;
+	border-radius: 10px;
+	border: 5px;
+}
+.your-video{
+	position: relative;
+	z-index: 100;
+	top: 30%;
+	right: 2%;
+	height: auto;
+	object-fit: cover;
+}
+.video-fixed{
+	z-index: 100;
+	color: white;
+	position: fixed;
+	bottom: 10%;
+	width: 100%;
+}
+.your-video-fixed{
+	z-index: 100;
+	color: white;
+	position: fixed;
+	bottom: 20%;
+	width: 100%;
+}
 @media (max-width:768px) {
+	.partner-video-height{
+		position: fixed;
+		right: -50%;
+		bottom: 0;
+	}
 	.fixed-navbar-header {
 		display: none;
 	}
@@ -578,7 +623,13 @@ body {
 	.client-nav-bar{
 		display: none;
 	}
-
+	.your-video-display{
+		max-height:300px ;
+		max-width: 50%;
+	}
+	.video-fixed{
+		bottom: 5%;
+	}
 }
 
 @media(min-width:768px) {
@@ -594,6 +645,17 @@ body {
 	.iframe-height{
 		height: 500px;
 	}
+	.video-fixed{
+		margin-left: 6rem;;
+	}
+	.your-video{
+		position: relative;
+		top: 30%;
+		right: 0px;
+		height: auto;
+		object-fit: cover;
+	}
+
 }
 
 @media (max-width: 1200px) {
@@ -606,6 +668,7 @@ body {
 	.user-dashboard-container h3{
 		height: 60px
 	}
+	
 }
 
 
